product and featured section done

--- a/index.html
+++ b/index.html
@@ -12,8 +12,299 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+
+    <!-- Header section HTML start from here -->
+    <header>
+        <nav>
+            <div class="container">
+                <div class="logo">
+                    <a href="index.html">Influencer products</a>
+                </div>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#product">Products</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Log in</a></li>
+                    </ul>
+                    <div class="nav-icons">
+                        <a href="#"><img src="./assets/icons/search.svg" alt=""></a>
+                        <a href="#"><img src="./assets/icons/card.svg" alt=""></a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!-- Header sectuion HTML end here -->
+
+    <main>
+    <!-- Banner section HTML start from here -->
+    <section class="banner">
+        <div class="container">
+            <div class="banner-con-main">
+                <div class="banner-text">
+                    <h1 class="banner-title">Start your Journey as Influencer</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="btn-primary"><span>preview now</span><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="banner-img">
+                    <img src="./assets/images/banner.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Banner section HTML end here -->
+
+    <!-- Sponser section HTML start from here -->
+     <section class="sponser">
+        <div class="container">
+            <div class="logos">
+                <div class="item1">
+                    <img src="./assets/logos/Alibaba.svg" alt="">
+                    <img src="./assets/logos/Amazon.svg" alt="">
+                    <img src="./assets/logos/Daraz.pk Logo.svg" alt="">
+                    <img src="./assets/logos/Ebay.svg" alt="">
+                </div>
+                <div class="item2">
+                    <img src="./assets/logos/Rakuten.svg" alt="">
+                    <img src="./assets/logos/Walmart.svg" alt="">
+                    <img src="./assets/logos/Target.svg" alt="">
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- Sponser section HTML end here -->
+
+    <!-- Product section HTML start from here -->
+     <section id="product">
+        <div class="container">
+            <div class="section-heading">
+                <h3>Popular Collection</h3>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/tripod.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">Flex Tripod</h3>
+                        <h4>$50.48</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/mic.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">microphone</h3>
+                        <h4>$120.25</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/airpod.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">airbuds</h3>
+                        <h4>$100.00</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/drone.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">drone</h3>
+                        <h4>$980.25</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/lights.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">light setup</h3>
+                        <h4>$1200.00</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/setup.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">Photoshoot set</h3>
+                        <h4>$820.40</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/camera.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">Vlogging Camera</h3>
+                        <h4>$1800.80</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/single-light.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">Green Screen</h3>
+                        <h4>$25.48</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+                        <img src="./assets/images/action.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3 class="product-name">Action Camera</h3>
+                        <h4>$580.48</h4>
+                        <div class="ratings">
+                            <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                            </div>
+                            <div class="rating-number">
+                                <span>4.99</span>
+                            </div>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="linking">
+                <a href="#"><span>see more</span><i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+        </div>
+     </section>
+    <!-- Product section HTML end here -->
+
+    <!-- Featured section HTML start from here -->
+     <section id="featured">
+        <div class="container">
+            <div class="left">
+                <img src="./assets/images/gear.png" alt="">
+            </div>
+            <div class="right">
+                <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <div class="btn">
+                    <button class="btn-primary"><span>join now</span><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- Featured section HTML end here -->
+    </main>
     <footer></footer>
 </body>
 </html>
