footer section done

--- a/index.html
+++ b/index.html
@@ -305,6 +305,20 @@
      </section>
     <!-- Featured section HTML end here -->
     </main>
-    <footer></footer>
+    <footer>
+        <a href="./index.html" class="footer-logo">Influencer products</a>
+        <div class="copyright">
+            Copyright © 2020 influencer products <br>
+            All rights reserved
+        </div>
+        <div class="social-links">
+            <ul>
+                <li><a href="#"><img src="./assets/icons/Instagram.svg" alt=""></a></li>
+                <li><a href="#"><img src="./assets/icons/Dribbble.svg" alt=""></a></li>
+                <li><a href="#"><img src="./assets/icons/Twitter.svg" alt=""></a></li>
+                <li><a href="#"><img src="./assets/icons/Youtube.svg" alt=""></a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
